@startuml

title __ASSIGNMENT's Class Diagram__\n

  namespace sample {
    class sample.AlertBox {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Graph {
    }
  }
  

  namespace sample {
    class sample.LocalErrorController {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Controller o-- sample.Graph : mygraph
  sample.Controller o-- sample.Graph : mygraph1
  sample.Controller o-- sample.Graph : mygraph2
  sample.LocalErrorController .up.|> javafx.fxml.Initializable
  sample.LocalErrorController o-- sample.Graph : lcoalErrorGraph
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
